# libadmin

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  crates.js  package.json  search-index.js  settings.html  source-files.js  sqlx-data.json
.github/workflows/: coverage.yml  linux.yml
config/: default.toml
database/db-core/: Cargo.toml
database/db-core/src/: account.rs  auth.rs  errors.rs  lib.rs  ops.rs  tests.rs
database/db-sqlx-postgres/: Cargo.toml
database/db-sqlx-postgres/migrations/: 20211017084123_admin_users.sql
database/db-sqlx-postgres/src/: account.rs  auth.rs  errors.rs  lib.rs  tests.rs
database/db-sqlx-sqlite/: Cargo.toml
database/db-sqlx-sqlite/src/: account.rs  auth.rs  errors.rs  lib.rs  tests.rs
database/migrator/: .gitignore  Cargo.toml
db_core/: all.html  index.html  sidebar-items.js  struct.Creds.html  struct.EmailRegisterPayload.html  struct.Password.html  struct.UpdateEmailPayload.html  struct.UpdateUsernamePayload.html  struct.UsernameRegisterPayload.html  trait.LibAdminDatabase.html
db_core/account/: index.html  sidebar-items.js  struct.UpdateEmailPayload.html  struct.UpdateUsernamePayload.html  trait.Account.html  trait.DeleteAccount.html  trait.EmailExists.html  trait.GetSecret.html  trait.UpdateEmail.html  trait.UpdatePassword.html  trait.UpdateSecret.html  trait.UpdateUsername.html  trait.UsernameExists.html
db_core/auth/: index.html  sidebar-items.js  trait.Auth.html
db_core/dev/: attr.async_trait.html  index.html
db_core/errors/: enum.DBError.html  index.html  type.BoxDynError.html  type.DBResult.html
db_core/ops/: index.html  trait.Connect.html  trait.DBOps.html  trait.GetConnection.html  trait.Migrate.html
db_core/prelude/: index.html
db_core/tests/: fn.duplicate_secret_guard_works.html  fn.duplicate_username_and_email.html  fn.email_register_works.html  fn.username_register_works.html  index.html
db_sqlx_postgres/: all.html  enum.ConnectionOptions.html  index.html  sidebar-items.js  struct.Conn.html  struct.ConnectionOptions.html  struct.Database.html  struct.Fresh.html
db_sqlx_postgres/account/: index.html
db_sqlx_postgres/auth/: index.html  sidebar-items.js
db_sqlx_postgres/dev/: attr.async_trait.html  enum.DBError.html  enum.Error.html  fn.map_register_err.html  index.html  sidebar-items.js  struct.Creds.html  struct.EmailRegisterPayload.html  struct.Password.html  struct.UpdateEmailPayload.html  struct.UpdateUsernamePayload.html  struct.UsernameRegisterPayload.html  trait.Account.html  trait.Auth.html  trait.Connect.html  trait.DBOps.html  trait.DeleteAccount.html  trait.EmailExists.html  trait.EmailLogin.html  trait.EmailRegister.html  trait.GetConnection.html  trait.GetSecret.html  trait.LibAdminDatabase.html  trait.Login.html  trait.Migrate.html  trait.Register.html  trait.UpdateEmail.html  trait.UpdatePassword.html  trait.UpdateSecret.html  trait.UpdateUsername.html  trait.UsernameExists.html  trait.UsernameLogin.html  trait.UsernameRegister.html  type.BoxDynError.html  type.DBResult.html
db_sqlx_postgres/errors/: fn.map_register_err.html  index.html
db_sqlx_postgres/prelude/: enum.DBError.html  index.html  sidebar-items.js  struct.Creds.html  struct.EmailRegisterPayload.html  struct.Password.html  struct.UpdateEmailPayload.html  struct.UpdateUsernamePayload.html  struct.UsernameRegisterPayload.html  trait.Account.html  trait.Auth.html  trait.Connect.html  trait.DBOps.html  trait.DeleteAccount.html  trait.EmailExists.html  trait.EmailLogin.html  trait.EmailRegister.html  trait.GetConnection.html  trait.GetSecret.html  trait.LibAdminDatabase.html  trait.Login.html  trait.Migrate.html  trait.Register.html  trait.UpdateEmail.html  trait.UpdatePassword.html  trait.UpdateSecret.html  trait.UpdateUsername.html  trait.UsernameExists.html  trait.UsernameLogin.html  trait.UsernameRegister.html  type.BoxDynError.html  type.DBResult.html
db_sqlx_sqlite/: all.html  enum.ConnectionOptions.html  index.html  sidebar-items.js  struct.Conn.html  struct.ConnectionOptions.html  struct.Database.html  struct.Fresh.html
db_sqlx_sqlite/account/: index.html
db_sqlx_sqlite/auth/: index.html
db_sqlx_sqlite/dev/: attr.async_trait.html  enum.DBError.html  enum.Error.html  index.html  sidebar-items.js  struct.Creds.html  struct.EmailRegisterPayload.html  struct.Password.html  struct.UpdateEmailPayload.html  struct.UpdateUsernamePayload.html  struct.UsernameRegisterPayload.html  trait.Account.html  trait.Auth.html  trait.Connect.html  trait.DBOps.html  trait.DeleteAccount.html  trait.EmailExists.html  trait.EmailLogin.html  trait.EmailRegister.html  trait.GetConnection.html  trait.GetSecret.html  trait.LibAdminDatabase.html  trait.Login.html  trait.Migrate.html  trait.Register.html  trait.UpdateEmail.html  trait.UpdatePassword.html  trait.UpdateSecret.html  trait.UpdateUsername.html  trait.UsernameExists.html  trait.UsernameLogin.html  trait.UsernameRegister.html  type.BoxDynError.html  type.DBResult.html
db_sqlx_sqlite/errors/: fn.map_register_err.html  index.html
db_sqlx_sqlite/prelude/: enum.DBError.html  index.html  struct.Creds.html  struct.EmailRegisterPayload.html  struct.Password.html  struct.UpdateEmailPayload.html  struct.UpdateUsernamePayload.html  struct.UsernameRegisterPayload.html  trait.Account.html  trait.Auth.html  trait.Connect.html  trait.DBOps.html  trait.DeleteAccount.html  trait.EmailExists.html  trait.EmailLogin.html  trait.EmailRegister.html  trait.GetConnection.html  trait.GetSecret.html  trait.LibAdminDatabase.html  trait.Login.html  trait.Migrate.html  trait.Register.html  trait.UpdateEmail.html  trait.UpdatePassword.html  trait.UpdateSecret.html  trait.UpdateUsername.html  (+5 more)
libadmin/: all.html  constant.CACHE_AGE.html  constant.V1_API_ROUTES.html  fn.init.html  index.html  sidebar-items.js  static.SETTINGS.html  struct.CSS.html  struct.Data.html  struct.FILES.html  struct.Settings.html
migrations/: 20211017084123_admin_users.sql
scripts/: spellcheck.sh
src/: data.rs  demo.rs  errors.rs  lib.rs  settings.rs  tests-migrate.rs  tests.rs
templates/: main.scss
(+752 files in other folders)
