[package]
name = "admin"
version = "0.1.0"
description = "Admin Panel"
homepage = "https://github.com/realaravinth/admin"
repository = "https://github.com/realaravinth/admin"
documentation = "https://github.con/realaravinth/admin"
readme = "https://github.com/realaravinth/admin/blob/master/README.md"
license = "AGPLv3 or later version"
authors = ["realaravinth <realaravinth@batsense.net>"]
edition = "2018"
default-run = "admin"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "admin"
path = "./src/main.rs"

[lib]
name = "libadmin"
path = "./src/lib.rs"


[[bin]]
name = "tests-migrate"
path = "./src/tests-migrate.rs"

[dependencies]
actix-web = "4.0.0-beta.9"
actix-identity = "0.4.0-beta.2"
actix-http = "3.0.0-beta.8"
actix-rt = "2"
actix-cors = "0.6.0-beta.2"
actix-service = "2.0.0"
actix-auth-middleware = { version = "0.1", git = "https://github.com/realaravinth/actix-auth-middleware", features = ["actix_identity_backend"] }
my-codegen = {package = "actix-web-codegen", git ="https://github.com/realaravinth/actix-web"}

futures = "0.3.15"

argon2-creds = { branch = "master", git = "https://github.com/realaravinth/argon2-creds"}

sqlx = { version = "0.5.5", features = [ "runtime-actix-rustls", "postgres", "time", "offline" ] }

derive_builder = "0.10"
validator = { version = "0.14", features = ["derive"]}
derive_more = "0.99"

config = "0.11"

serde = "1"
serde_json = "1"

pretty_env_logger = "0.4"
log = "0.4"

lazy_static = "1.4"

url = "2.2"
urlencoding = "2.1.0"

rand = "0.8"
uuid = { version="0.8.2", features = ["v4"]}

mime_guess = "2.0.3"
rust-embed = "6.0.0"
cache-buster = { git = "https://github.com/realaravinth/cache-buster" }
mime = "0.3.16"

sailfish = "0.3.2"

tokio = "1.11.0"

[build-dependencies]
sqlx = { version = "0.5.5", features = [ "runtime-actix-rustls", "uuid", "postgres", "time", "offline" ] }
#serde_yaml = "0.8.17"
serde_json = "1"
#yaml-rust = "0.4.5"
cache-buster = { version = "0.2.0", git = "https://github.com/realaravinth/cache-buster" }
mime = "0.3.16"
