[package]
name = "libadmin"
version = "0.1.0"
description = "Admin Panel"
homepage = "https://github.com/realaravinth/admin"
repository = "https://github.com/realaravinth/admin"
documentation = "https://github.con/realaravinth/admin"
readme = "https://github.com/realaravinth/admin/blob/master/README.md"
license = "AGPLv3 or later version"
authors = ["realaravinth <realaravinth@batsense.net>"]
edition = "2018"
build = "build.rs"
exclude = ["./static/cache/bundle/*", "database/migrator"]
include = ["./static/", "./templates"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libadmin"
path = "./src/lib.rs"

[workspace]
exclude = ["database/migrator"]
members = [ ".", "database/db-core", "database/db-sqlx-postgres", "database/db-sqlx-sqlite"]

[dependencies]
db-core = {path = "./database/db-core"}
futures = "0.3.15"

argon2-creds = { branch = "master", git = "https://github.com/realaravinth/argon2-creds"}

derive_builder = "0.10"
validator = { version = "0.14", features = ["derive"]}
derive_more = "0.99"

config = "0.11"

serde = "1"
serde_json = "1"

pretty_env_logger = "0.4"
log = "0.4"

lazy_static = "1.4"
once_cell = "1.8.0"

url = "2.2"
urlencoding = "2.1.0"

rand = "0.8"
uuid = { version="0.8.2", features = ["v4"]}

mime_guess = "2.0.3"
rust-embed = "6.0.0"
cache-buster = { git = "https://github.com/realaravinth/cache-buster" }
mime = "0.3.16"

sailfish = "0.3.2"

tokio = "1.11.0"




[build-dependencies]
#serde_yaml = "0.8.17"
serde_json = "1"
#yaml-rust = "0.4.5"
cache-buster = { version = "0.2.0", git = "https://github.com/realaravinth/cache-buster" }
sqlx = { version = "0.5.5", features = [ "runtime-actix-rustls", "uuid", "postgres", "time", "offline" ] }
mime = "0.3.16"

[dev-dependencies]
actix-rt = "2"
sqlx = { version = "0.5.5", features = [ "runtime-actix-rustls", "uuid", "postgres", "time", "offline", "sqlite" ] }
db-sqlx-postgres = {path = "./database/db-sqlx-postgres"}
db-sqlx-sqlite = {path = "./database/db-sqlx-sqlite"}
