[package]
name = "db-sqlx-sqlite"
version = "0.1.0"
edition = "2018"
homepage = "https://github.com/realaravinth/admin"
repository = "https://github.com/realaravinth/admin"
documentation = "https://github.con/realaravinth/admin"
readme = "https://github.com/realaravinth/admin/blob/master/README.md"
license = "AGPLv3 or later version"
authors = ["realaravinth <realaravinth@batsense.net>"]
include = ["./mgrations/"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.9", features = [ "sqlite", "time", "offline" ] }
db-core = {path = "../db-core"}
async-trait = "0.1.51"

[dev-dependencies]
actix-rt = "2"
sqlx = { version = "0.5.5", features = [ "runtime-actix-rustls", "postgres", "time", "offline" ] }
db-core = {path = "../db-core", features = ["test"]}
